--- a/views/index.hbs
+++ b/views/index.hbs
@@ -13,8 +13,8 @@
                 </div>
                 <div class="col-md-6">
                     <div class="home-imgctr" class="text-center">
-                        <img src="/Photos/avtarimg.JPG" alt="Pramod Vaghasia Profile Photo" id="home-myavtar"
-                            class="img-fluid rounded-circle">
+                        <img src="/Photos/avtarimg.png" alt="Pramod Vaghasia Profile Photo" id="home-myavtar"
+                           >
                     </div>
                 </div>
             </div>
