--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -127,14 +127,19 @@ section {
 }
 
 #home-myavtar {
-  border: 3px solid black;
+  border-radius: 8px;
+  box-shadow: 2px 2px 4px 4px rgba(0, 0, 0, 0.2);
+  -webkit-border-radius: 8px;
+  -moz-border-radius: 8px;
+  -ms-border-radius: 8px;
+  -o-border-radius: 8px;
 }
 
 #home-myavtar {
-  height: 300px;
-  width: 300px;
+  height: 320px;
+  width: 440px;
   position: relative;
-  top: 30%;
+  top: 20%;
   margin-left: 150px;
 }
 .home-btn-hire {
