active menu item

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -24,7 +24,8 @@ section {
   background-color: #fbfbfb;
 }
 
-#home-section,#about-section {
+#home-section,
+#about-section {
   height: 100%;
 }
 
@@ -79,13 +80,14 @@ section {
   font-weight: 600;
 }
 
-.navitem ul li:hover a {
+.navitem ul li:hover a{
   color: #ffb633;
-  transition: all 200ms linear;
-  -webkit-transition: all 200ms linear;
-  -moz-transition: all 200ms linear;
-  -ms-transition: all 200ms linear;
-  -o-transition: all 200ms linear;
+}
+
+.navitem ul li:active a,
+.navitem ul li a.active {
+  color: #ffb633;
+  border-bottom: 1px solid #ffb633;
 }
 
 /* Home section */
@@ -139,7 +141,7 @@ section {
   height: 320px;
   width: 440px;
   position: relative;
-  top: 20%;
+  top: 25%;
   margin-left: 150px;
 }
 .home-btn-hire {
@@ -160,43 +162,42 @@ section {
 
 /* hire me button */
 .home-btn-hire:hover {
-    transition: all 200ms linear;
-    border: 2px solid #ffb633;
-    background-color: white;
-    color: #ffb633;
-    border-radius: 5px;
-    -webkit-border-radius: 5px;
-    -moz-border-radius: 5px;
-    -ms-border-radius: 5px;
-    -o-border-radius: 5px;
-    -webkit-transition: all 200ms linear;
-    -moz-transition: all 200ms linear;
-    -ms-transition: all 200ms linear;
-    -o-transition: all 200ms linear;
+  transition: all 200ms linear;
+  border: 2px solid #ffb633;
+  background-color: white;
+  color: #ffb633;
+  border-radius: 5px;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  -ms-border-radius: 5px;
+  -o-border-radius: 5px;
+  -webkit-transition: all 200ms linear;
+  -moz-transition: all 200ms linear;
+  -ms-transition: all 200ms linear;
+  -o-transition: all 200ms linear;
 }
 
 /* about section */
 
 /* left section text */
-.about-section-textctr,.about-section2-textctr{
+.about-section-textctr,
+.about-section2-textctr {
   margin-top: 50px;
- 
 }
-.about-section2-textctr{
- margin-left: 10px;
+.about-section2-textctr {
+  margin-left: 10px;
 }
 .about-txt1 {
- font-size: 20px;
+  font-size: 20px;
   font-weight: 800;
   line-height: 40px;
-   text-align: justify;
+  text-align: justify;
   word-spacing: 0.5px;
 }
 .about-txt2 {
- color: #707070;
+  color: #707070;
   font-size: 15px;
   font-weight: 400;
-   text-align: justify;
+  text-align: justify;
   word-spacing: 0.5px;
 }
-
