--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -2,6 +2,10 @@
 <html>
   <head>
     <title>{{Title}}</title>
+     <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
     <link rel='stylesheet' href='/stylesheets/style.css' />
     <!-- Yeti Bootstrap Theme from bootswatch.com -->
     <link rel='stylesheet' href="/stylesheets/bootstrap.min.css"/>
@@ -39,7 +43,7 @@
             <a href="/portfolio">Portfolio</a>
           </li>
           <li>
-            <a href="/contact">Contact</a>
+            <a href="/contact" class="{{#if activeContact}}active{{else}}''{{/if}}">Contact</a>
           </li>
         </ul>
       </div>
