--- a/views/index.hbs
+++ b/views/index.hbs
@@ -14,7 +14,7 @@
                 <div class="col-md-6">
                     <div class="home-imgctr" class="text-center">
                         <img src="/Photos/avtarimg.png" alt="Pramod Vaghasia Profile Photo" id="home-myavtar"
-                           >
+                          class='img-fluid' >
                     </div>
                 </div>
             </div>
