--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -37,7 +37,7 @@
             <a href="/resume">Resume</a>
           </li>
           <li>
-            <a href="/service">Service</a>
+            <a href="/service" class="{{#if activeServices}}active{{else}}''{{/if}}">Service</a>
           </li>
           <li>
             <a href="/portfolio">Portfolio</a>
