--- a/views/about.hbs
+++ b/views/about.hbs
@@ -39,10 +39,10 @@
                     technologies that make up the stack.
                   </p>
                 </div>
-                  <div class='col-md-12'>
+                <div class='col-md-12'>
                   <p class='about-txt1'>Current Status :</p>
                   <p class='about-txt2'>
-                    I am avtively working on mobile and web application
+                    I am actively working on mobile and web application
                     development as a freelancer as I am pursuing my studies at
                     Conestoga College. I took Mobile Application development
                     course which gives me wide exposure of different
@@ -69,7 +69,7 @@
 
           </div>
         </div>
-       
+
       </div>
     </div>
   </div>
