--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -55,5 +55,11 @@
   </head>
   <body>
     {{{body}}}
+    <footer id="footer">
+      <p>
+        Copyright @ 2021 All Rights Reserved By <strong>Pramod Vaghasia.</strong>
+      </p>
+    </footer>
+
   </body>
 </html>
