--- a/views/services.hbs
+++ b/views/services.hbs
@@ -7,7 +7,7 @@
             <div class='service-left-icon'>
               <img
                 src='/Photos/service.png'
-                alt='serrvice image'
+                alt='service image'
                 class='img-fluid'
               />
               <div style="margin-left: 100px; font-size: 10px">Icons made by
