--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -3,14 +3,13 @@
   padding: 0;
   margin: 0;
 }
-html,
-body {
-  height: 100%;
-  width: 100%;
-}
-
-body {
-  color: #fbfbfb;
+  html,
+  body {
+    height: 100%;
+    width: 100%;
+  }
+p {
+  color: black;
 }
 h1,
 h2,
@@ -28,31 +27,10 @@ section {
 #home-section,
 #about-section,
 #contact-section,
-#service-section {
+#service-section,
+#portfolio-section {
   height: 100%;
   width: 100%;
-}
-
-/* loader */
-#loader {
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  background-color: white;
-  z-index: 9999;
-}
-
-#loader-img {
-  height: 50px;
-  width: 50px;
-  position: relative;
-  top: 50%;
-  left: 50%;
-  background-image: url('../Photos/loading.gif');
-  margin-top: -50px;
-  margin-left: -50px;
 }
 
 /* nav */
@@ -444,4 +422,70 @@ p {
   margin: 0;
   text-align: center;
   font-size: 15px;
+}
+
+/* portfolio styling */
+#portfolio-section{
+  padding-bottom: 20px;
+}
+.port-content {
+  overflow: hidden;
+  position: relative;
+  cursor: pointer;
+  height: 300px;
+  margin-top: 20px;
+  box-shadow: 1px 1px 10px 1px rgba(0, 0, 0, 0.233);
+  border-radius: 30px;
+  -webkit-border-radius: 30px;
+  -moz-border-radius: 30px;
+  -ms-border-radius: 30px;
+  -o-border-radius: 30px;
+}
+.port-content img{
+  height: 100%;
+  width: 100%;
+  scale: 1.5;
+}
+.port-overly h3{
+  border-bottom: 2px solid white;
+}
+.port-overly {
+  background-color: rgba(0, 0, 0, 0.7);
+  position: absolute;
+  color: white;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  height: 0%;
+  width: 100%;
+  overflow: hidden;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  transition: 0.5s ease;
+  pointer-events: none;
+  -webkit-transition: 0.5s ease;
+  -moz-transition: 0.5s ease;
+  -ms-transition: 0.5s ease;
+  -o-transition: 0.5s ease;
+}
+.port-overly a{
+  font-size: 10px;
+}
+.port-content:hover .port-overly {
+  height: 100%;
+}
+.port-content:hover img {
+  transform: scale(1.1);
+  -webkit-transform: scale(1.1);
+  -moz-transform: scale(1.1);
+  -ms-transform: scale(1.1);
+  -o-transform: scale(1.1);
+  transition: all 0.5s ease-in-out;
+  -webkit-transition: all 0.5s ease-in-out;
+  -moz-transition: all 0.5s ease-in-out;
+  -ms-transition: all 0.5s ease-in-out;
+  -o-transition: all 0.5s ease-in-out;
 }
