--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,23 +1,27 @@
 <!-- home sectioln -->
-<section id="home-section">
-    <div class="home-section-box">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-6">
-                    <div class="home-section-textctr">
-                        <p class="home-txt1">Hello, I'am Pramod</p>
-                        <p class="home-txt2">Full Stack <br><strong>Developer</strong></p>
-                        <p class="home-txt3">Android Application And <br>Web Developer</p>
-                        <button class="home-btn-hire">Hire Me</button>
-                    </div>
-                </div>
-                <div class="col-md-6">
-                    <div class="home-imgctr" class="text-center">
-                        <img src="/Photos/avtarimg.png" alt="Pramod Vaghasia Profile Photo" id="home-myavtar"
-                          class='img-fluid' >
-                    </div>
-                </div>
-            </div>
+<section id='home-section'>
+  <div class='home-section-box'>
+    <div class='container'>
+      <div class='row'>
+        <div class='col-md-6'>
+          <div class='home-section-textctr'>
+            <p class='home-txt1'>Hello, I'am Pramod</p>
+            <p class='home-txt2'>Full Stack <br /><strong>Developer</strong></p>
+            <p class='home-txt3'>Android Application And <br />Web Developer</p>
+            <button class='home-btn-hire'>Hire Me</button>
+          </div>
         </div>
+        <div class='col-md-6'>
+          <div class='home-imgctr' class='text-center'>
+            <img
+              src='/Photos/avtarimg.png'
+              alt='Pramod Vaghasia Profile Photo'
+              id='home-myavtar'
+              class='img-fluid'
+            />
+          </div>
+        </div>
+      </div>
     </div>
+  </div>
 </section>
