--- a/views/index.hbs
+++ b/views/index.hbs
@@ -8,7 +8,10 @@
             <p class='home-txt1'>Hello, I'am Pramod</p>
             <p class='home-txt2'>Full Stack <br /><strong>Developer</strong></p>
             <p class='home-txt3'>Android Application And <br />Web Developer</p>
-            <button class='home-btn-hire'>Hire Me</button>
+            <form action='/contact' method='GET'>
+              <button class='home-btn-hire'>Hire Me</button>
+            </form>
+
           </div>
         </div>
         <div class='col-md-6'>
