--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -3,11 +3,11 @@
   padding: 0;
   margin: 0;
 }
-  html,
-  body {
-    height: 100%;
-    width: 100%;
-  }
+html,
+body {
+  height: 100%;
+  width: 100%;
+}
 p {
   color: black;
 }
@@ -34,46 +34,41 @@ section {
 }
 
 /* nav */
-
-.navbar-brand {
-  color: #fbd31a;
-  font-size: 25px !important;
-  font-weight: 700;
-  margin-left: 100px;
-}
-.navbar-brand:hover {
-  color: black;
-}
-
-.navbar-custom {
-  background-color: white;
+.navbar{
   height: 90px;
+  background-color: white !important;
 }
-
-.navitem ul li {
-  width: 140px;
+.nav-item{
+ margin-right: 50px;
 }
-
-.navitem {
-  width: 100%;
-}
-
-.navitem ul li a {
-  list-style: none;
-  text-decoration: none;
-  color: black;
+.navbar-nav a {
   font-size: 15px;
   font-weight: 600;
+  display: block;
+  transition: 0.1s linear;
+  color: black !important;
+  -webkit-transition: 0.1s linear;
+  -moz-transition: 0.1s linear;
+  -ms-transition: 0.1s linear;
+  -o-transition: 0.1s linear;
+}
+.navbar-nav a:hover {
+ color: #ffb633 !important;
+  border-bottom: 1px solid #ffb633 ;
 }
 
-.navitem ul li:hover a,
-.navitem ul li:active a,
-.navitem ul li a.active {
-  color: #ffb633;
-  border-bottom: 1px solid #ffb633;
+.navbar-nav > .active > a {
+color: #ffb633 !important;
+  border-bottom: 1px solid #ffb633 ;   
 }
+ .navbar-brand {
+  color: #fbd31a !important;
+  font-size: 25px !important;
+  font-weight: 700;
+  margin-left: 50px;
+}
+
 /* 404 page not found */
-
 .error-heading h1 {
   position: absolute;
   top: 50%;
@@ -425,7 +420,7 @@ p {
 }
 
 /* portfolio styling */
-#portfolio-section{
+#portfolio-section {
   padding-bottom: 20px;
 }
 .port-content {
@@ -441,12 +436,12 @@ p {
   -ms-border-radius: 30px;
   -o-border-radius: 30px;
 }
-.port-content img{
+.port-content img {
   height: 100%;
   width: 100%;
   scale: 1.5;
 }
-.port-overly h3{
+.port-overly h3 {
   border-bottom: 2px solid white;
 }
 .port-overly {
@@ -471,7 +466,7 @@ p {
   -ms-transition: 0.5s ease;
   -o-transition: 0.5s ease;
 }
-.port-overly a{
+.port-overly a {
   font-size: 10px;
 }
 .port-content:hover .port-overly {
