--- a/views/contactme.hbs
+++ b/views/contactme.hbs
@@ -4,7 +4,7 @@
       <div class='row'>
         <div class='col-md-6 col-sm-12'>
           <div class='aboutus-details'>
-              <h2>Get In Touch</h2>
+            <h2>Get In Touch</h2>
             <p>Reach out to me on below addresses.
             </p>
             <div class='row'>
@@ -56,7 +56,7 @@
         </div>
         <div class='col-md-6'>
           <div class='form-box'>
-            <h3>Contact Us</h3>
+            <h3>Contact Me</h3>
             <p>
               Fill below form to get in touch with me.
             </p>
@@ -93,7 +93,7 @@
                 <div class='col-md-12'>
                   <textarea
                     class='form-control'
-                    placeholder="Write Discription"
+                    placeholder='Write Discription'
                     id='exampleFormControlTextarea1'
                     rows='8'
                   ></textarea>
