--- a/views/contactme.hbs
+++ b/views/contactme.hbs
@@ -10,7 +10,7 @@
             <div class='row'>
               <div class='col-md-6'>
                 <div class='about-datalist'>
-                  <h6>Gujarat,India</h6>
+                  <h5><i class='fa fa-dote'></i>Gujarat,India</h5>
                   <ul>
                     <li><i class='fa fa-mobile'></i>+91 98524 45854</li>
                     <li><i class='fa fa-envelope'></i>support@me.com</li>
@@ -25,7 +25,7 @@
               </div>
               <div class='col-md-6 col-sm-12'>
                 <div class='about-datalist'>
-                  <h6>Waterloo, Canada</h6>
+                  <h5>Waterloo, Canada</h5>
                   <ul>
                     <li><i class='fa fa-mobile'></i>+201 98525 4585</li>
                     <li><i class='fa fa-envelope'></i>support@me.com</li>
