--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -74,6 +74,10 @@
     </section> 
     <script
       type='text/javascript'
+      src='/stylesheets/jquery/jquery-min.js'
+    ></script>
+    <script
+      type='text/javascript'
       src='/stylesheets/bootstrap/js/bootstrap.min.js'
     ></script>
 
